--- a/index.html
+++ b/index.html
@@ -414,6 +414,14 @@
                 </div>
                 <h2>SmartMoney</h2>
             </div>
+            <div class="SitesButton_Container">
+                <div class="SitesButton_Hyperlink">
+                    <a href="danielaraujo07.github.io/pizzaCavanha" target="_blank">
+                        <img src="img/pizzaCavanha.png" class="SitesIcons_Images" alt="Pizza do Cavanha">
+                    </a>
+                </div>
+                <h2>Pizza do Cavanha</h2>
+            </div>
         </div>
     </article>
 </body>
