--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="TopicContent_Container">
             <div class="SitesButton_Container">
                 <div class="SitesButton_Hyperlink">
-                    <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6"
+                    <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dk_nZHmxxf_J0WRAqy5Czye"
                         target="_blank">
                         <img src="img/Python.png" class="SitesIcons_Images" alt="Python">
                     </a>
