--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="TopicContent_Container">
             <div class="SitesButton_Container">
                 <div class="SitesButton_Hyperlink">
-                    <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dk_nZHmxxf_J0WRAqy5Czye"
+                    <a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6"
                         target="_blank">
                         <img src="img/Python.png" class="SitesIcons_Images" alt="Python">
                     </a>
@@ -366,6 +366,14 @@
                     </a>
                 </div>
                 <h2>OBI</h2>
+            </div>
+                        <div class="SitesButton_Container">
+                <div class="SitesButton_Hyperlink">
+                    <a href="https://classroom.google.com/u/1/?pli=1" target="_blank">
+                        <img src="img/Classroom.png" class="SitesIcons_Images" alt="Google Classroom">
+                    </a>
+                </div>
+                <h2>Classroom</h2>
             </div>
         </div>
         <div class="TpcNmCntr_Container">
@@ -416,7 +424,7 @@
             </div>
             <div class="SitesButton_Container">
                 <div class="SitesButton_Hyperlink">
-                    <a href="danielaraujo07.github.io/pizzaCavanha" target="_blank">
+                    <a href="http://localhost/ProjetosPHP/pizzaCavanha()/restrito/index.php" target="_blank">
                         <img src="img/pizzaCavanha.png" class="SitesIcons_Images" alt="Pizza do Cavanha">
                     </a>
                 </div>
