--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="TopicsNavigate_Hyperlink" href="#AIs">IAs</a>
             <a class="TopicsNavigate_Hyperlink" href="#Messages">MENSAGENS</a>
             <a class="TopicsNavigate_Hyperlink" href="#VideoMusic">AUDIOVISUAL</a>
-            <a class="TopicsNavigate_Hyperlink" href="#School">ESCOLA</a>
+            <a class="TopicsNavigate_Hyperlink" href="#Studies">ESTUDOS</a>
             <a class="TopicsNavigate_Hyperlink" href="#Others">OUTROS</a>
         </div>
     </header>
@@ -354,41 +354,6 @@
 
         <div class="TopicContainer">
             <div class="TpcNmCntr_Container">
-                <div class="TopicName_Container" id="School">
-                    <h1>ESCOLA</h1>
-                </div>
-            </div>
-            <div class="TopicContent_Container">
-                <div class="SitesButton_Container">
-                    <div class="SitesButton_Hyperlink">
-                        <a href="https://teams.microsoft.com/" target="_blank">
-                            <img src="img/Teams.png" class="SitesIcons_Images" alt="Microsoft Teams">
-                        </a>
-                    </div>
-                    <h2>Teams</h2>
-                </div>
-                <div class="SitesButton_Container">
-                    <div class="SitesButton_Hyperlink">
-                        <a href="https://home.plurall.net/" target="_blank">
-                            <img src="img/Plurall.png" class="SitesIcons_Images" alt="Plurall">
-                        </a>
-                    </div>
-                    <h2>Plurall</h2>
-                </div>
-                <div class="SitesButton_Container">
-                    <div class="SitesButton_Hyperlink">
-                        <a href="https://portaldoaluno.fiemg.com.br/FrameHTML/web/app/edu/PortalEducacional/#/"
-                            target="_blank">
-                            <img src="img/sesi.jpg" class="SitesIcons_Images" alt="Portal do Aluno SESI">
-                        </a>
-                    </div>
-                    <h2>Portal SESI</h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="TopicContainer">
-            <div class="TpcNmCntr_Container">
                 <div class="TopicName_Container" id="Studies">
                     <h1>ESTUDOS</h1>
                 </div>
@@ -402,6 +367,15 @@
                         </a>
                     </div>
                     <h2>Python</h2>
+                </div>
+                <div class="SitesButton_Container">
+                    <div class="SitesButton_Hyperlink">
+                        <a href="https://web.dio.me/home"
+                            target="_blank">
+                            <img src="img/DIO.png" class="SitesIcons_Images" alt="DIO Courses">
+                        </a>
+                    </div>
+                    <h2>DIO</h2>
                 </div>
                 <div class="SitesButton_Container">
                     <div class="SitesButton_Hyperlink">
@@ -426,6 +400,31 @@
                         </a>
                     </div>
                     <h2>Classroom</h2>
+                </div>
+                <div class="SitesButton_Container">
+                    <div class="SitesButton_Hyperlink">
+                        <a href="https://teams.microsoft.com/" target="_blank">
+                            <img src="img/Teams.png" class="SitesIcons_Images" alt="Microsoft Teams">
+                        </a>
+                    </div>
+                    <h2>Teams</h2>
+                </div>
+                <div class="SitesButton_Container">
+                    <div class="SitesButton_Hyperlink">
+                        <a href="https://home.plurall.net/" target="_blank">
+                            <img src="img/Plurall.png" class="SitesIcons_Images" alt="Plurall">
+                        </a>
+                    </div>
+                    <h2>Plurall</h2>
+                </div>
+                <div class="SitesButton_Container">
+                    <div class="SitesButton_Hyperlink">
+                        <a href="https://portaldoaluno.fiemg.com.br/FrameHTML/web/app/edu/PortalEducacional/#/"
+                            target="_blank">
+                            <img src="img/sesi.jpg" class="SitesIcons_Images" alt="Portal do Aluno SESI">
+                        </a>
+                    </div>
+                    <h2>Portal SESI</h2>
                 </div>
             </div>
         </div>
@@ -487,7 +486,7 @@
                 </div>
             </div>
         </div>
-        
+
     </article>
 </body>
 
